Fix font spacings

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 .srk-header {
-    font-size: 4.1em;
+    font-size: 4.3em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,10 +26,12 @@ html, body {
     font-family: 'Overpass Mono', monospace;
     text-rendering: optimizeLegibility;
     margin-right: 65px;
+    margin-top: 0.2em;
 }
 
 .srk-header-title p {
     margin: 0;
+    line-height: 1.2em;
 }
 
 .srk-header-title-underscore {
@@ -41,11 +43,11 @@ html, body {
 }
 
 .srk-header-title p:first-child {
-    margin-top: -0.17em;
+    /* margin-top: -0.17em; */
 }
 
 .srk-header-title p:last-child {
-    margin-bottom: -0.37em;
+    /* margin-bottom: -0.37em; */
 }
 
 .srk-header-image {
